lostCTRL/force-app/main/default/objects/Movie__c/fields/Genres__c.field-meta.xml
<CustomField>
    <fullName>Genres__c</fullName>
    <label>Genres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>