lostCTRL/force-app/main/default/objects/Movie__c/fields/PosterPath__c.field-meta.xml
<CustomField>
    <fullName>PosterPath__c</fullName>
    <label>PosterPath</label>
    <type>TextArea</type>
</CustomField>