lostCTRL/force-app/main/default/objects/Movie__c/fields/releaseDate__c.field-meta.xml
<CustomField>
    <fullName>releaseDate__c</fullName>
    <label>releaseDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>